# RayTracingTheNextWeek

./: .gitignore  .gitmodules  CMakeLists.txt
include/: ConstantMedium.h  Shader.h  Window.h  aabb.h  bvh.h  camera.h  hittable.h  material.h  perlin.h  ray.h  rtnextweek.h  shapes.h  texture.h
install/RayTracingTheNextWeek/res/shaders/: base.vs
lib/: glfw3.lib
src/: RayTracingTheNextWeek.cpp  Shader.cpp  Window.cpp
